# mir_ros2

./: .gitignore  README.md
lidar-3d-gazebo/: CMakeLists.txt  package.xml
lidar-3d-gazebo/models/lidar3D/: model.urdf
mir/mir_description/: CMakeLists.txt  LICENSE  package.xml
mir/mir_description/config/: diff_drive_controller.yaml  diff_drive_controller_velocity.yaml  ros-gz-bridge.yaml
mir/mir_description/launch/: gazebo.launch  rviz.launch
mir/mir_description/meshes/mir250 TODO/collision/: mir250-lidars.stl  mir250-wheel-left.stl
mir/mir_description/meshes/mir250 TODO/visual/: mir250-caster-wheel-bl.dae  mir250-caster-wheel-br.dae  mir250-caster-wheel-fl.dae  mir250-wheel-left.dae  mir250-wheel-right.dae
mir/mir_description/meshes/mir250/collision/: mir250-base.stl  mir250-wheel-right.stl
mir/mir_description/meshes/mir250/visual/: mir250-lidars.dae
mir/mir_description/meshes/mir_100/visual/: SICK-lidar.dae  base.dae  caster-wheel-base.dae  caster-wheel.dae
mir/mir_description/meshes/mir_200/collision/: base.stl
mir/mir_description/meshes/mir_200/visual/: base.dae  wheel.dae
mir/mir_description/meshes/visual/: mir250-caster-wheel-fr.dae
mir/mir_description/rviz/: robot.rviz
mir/mir_description/urdf/: mir.sdf  mir.urdf  mir.urdf.xacro
mir/mir_description/urdf/include/: common.gazebo.xacro  common_properties.urdf.xacro  imu.gazebo.urdf.xacro  mir.gazebo.xacro  mir_macro.xacro  mir_v1.urdf.xacro  mir_v2.urdf.xacro  realsense_camera.urdf.xacro  sick_s300.urdf.xacro
mir/mir_description/world/: empty.world
mir/mir_gazebo/: CMakeLists.txt  package.xml
mir/mir_gazebo/config/: diff_drive_controller_velocity.yaml  ros-gz-bridge.yaml
mir/mir_gazebo/config/rviz/: lidar.rviz
mir/mir_gazebo/launch/: frame_id_tf.launch  gazebo.launch
mir/mir_gazebo/urdf/: mir.sdf  mir.urdf  mir.urdf.xacro
mir/mir_gazebo/urdf/include/: control.gazebo.xacro  depthcamera.gazebo.xacro  imu.gazebo.xacro  lidar.gazebo.xacro  macro.gazebo.xacro  scanner.gazebo.xacro
mir/mir_gazebo/world/: empty.world
