<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mir_gazebo</name>
  <version>0.1.0</version>
  <description>Launches the MIR robot in gazebo SIM environment</description>
  <maintainer email="shivam.shivam@th-deg.de">Shivam Shivam</maintainer>
  <license>Apache-2.0</license>

  <depend>mir_description</depend>
  <depend>ros_gz</depend>  
  <depend>gz_ros2_control</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/../../../mir_description/share/"/> -->
  </export>
</package>
